ajout 2 fichiers et modif
Ajout cookies et pancakes - modif readme et index

--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -7,5 +7,37 @@
 </head>
 <body>
 	<h1>Tiramisu</h1>
+	<img src="https://media.houra.fr/images/widget/recette/gd_recette_tiramisu.jpg" alt="Tiramisu">
+	<p class="description">Vous trouverez ici la recette originale du tiramisu, qui ne demande que peu d'effort.<br>Celle-ci convient pour 8 personnes</p>
+
+	<section class="ingredients">
+		<ul>Liste des ingrédients dont vous aurez besoin :
+			<li>sucre - 6 cuillères à soupe</li>
+			<li>oeufs - 6</li>
+			<li>mascarpone - 500g</li>
+			<li>cacao amer</li>
+			<li>biscuits cuillère - 36</li>
+			<li>café noir - 1 bol</li>
+			<li>sucre vanillé - 2 sachets</li>
+		</ul>
+	</section>
+	<section class="etapes">
+		<ul>Préparation
+			<li>Séparer le blanc des jaunes d'oeufs</li>
+			<li>Mélanger les jaunes d'oeufs avec le sucre et le sucre vanillé, jusqu'à ce que le résultat blanchisse</li>
+			<li>Incorporer le mascarpone à la préparation, bien mélanger</li>
+			<li>Battre les blancs en neige</li>
+			<li>Mélanger les 2 préparations délicatement</li>
+			<li>Plonger les biscuits dans le café pendant 1s</li>
+			<li>Disposer la moitié des biscuits dans le fond du plat</li>
+			<li>Ajouter la moitié de la préparation au dessus</li>
+			<li>Disposer ensuite la 2ème partie des biscuits au dessus</li>
+			<li>Ajouter le reste de la préparation</li>
+			<li>Saupoudrer de chocolat amer</li>
+			<li>Mettre au frais pendant 2 heures</li>
+		</ul>
+
+	</section>
+
 </body>
 </html>
