--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
 	<h1>Odin Recipes</h1>
+	<ul>
+		<li><a href="recipes/tiramisu.html">Recette du tiramisu</a></li>
+		<li><a href="recipes/cookies.html">Recette des cookies</a></li>
+		<li><a href="recipes/pancakes.html">Recette des pancakes</a></li>
+	</ul>
 </body>
 </html>
