--- a/recipes/cookies.html
+++ b/recipes/cookies.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 	<title>Cookies</title>
+	<button class="return"><a href="../index.html">Retour au menu</a></button>
 </head>
 <body>
 	<h1>Cookies</h1>
@@ -22,7 +24,7 @@
 		</ul>
 	</section>
 	<section class="etapes">
-		<ul>Préparation
+		<ol>Préparation
 			<li>Faire fondre le beurre et y ajouter le sucre</li>
 			<li>Remuer avant d'ajouter l'oeuf entier, puis incorporer la farine, la levure et la pincée de sel.</li>
 			<li>Bien mélanger le tout à l'aide d'une cuillère jusqu'à l'obtention d’une pâte homogène.</li>
@@ -31,7 +33,7 @@
 			<li>Disposer sur une plaque recouverte de papier sulfurisé.</li>
 			<li>Préchauffer le four à 180 °C (thermostat 6) puis enfourner 8 à 10 min (légèrement doré et toujours moelleux au cœur).</li>
 			<li>Laisser refroidir</li>
-		</ul>
+		</ol>
 	</section>
 </body>
 </html>
