--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -2,8 +2,10 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Pancakes</title>
+	<button class="return"><a href="../index.html">Retour au menu</a></button>
 </head>
 <body>
 	<h1>Pancakes</h1>
@@ -23,7 +25,7 @@
 		</ul>
 	</section>
 	<section class="etapes">
-		<ul>Préparation
+		<ol>Préparation
 			<li>Dans un saladier, mélanger farine + sucre + sucre vanillé + levure + sel.</li>
 			<li>Dans un autre récipient, mélanger jaunes d'œufs + lait.</li>
 			<li>Verser ce mélange dans le premier saladier petit à petit afin d’éviter les grumeaux.</li>
@@ -31,7 +33,7 @@
 			<li>Battre les blancs en neige ferme avec 1 pincée de sel.</li>
 			<li>Les incorporer à la préparation délicatement afin de ne pas les casser.</li>
 			<li>Pour la cuisson, à feu très doux : huiler une petite poêle, mettre 1 louche de préparation puis attendre que toute la surface soit couverte de trous et qu’elle paraisse « sèche » et la retourner pour qu’elle cuise de l’autre côté environ 1 minute.</li>
-		</ul>
+		</ol>
 	</section>
 </body>
 </html>
