--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -2,8 +2,10 @@
 <html lang="fr">
 <head>
 	<meta charset="UTF-8">
+	<link rel="stylesheet" type="text/css" href="../style.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Tiramisu</title>
+	<button class="return"><a href="../index.html">Retour au menu</a></button>
 </head>
 <body>
 	<h1>Tiramisu</h1>
@@ -22,7 +24,7 @@
 		</ul>
 	</section>
 	<section class="etapes">
-		<ul>Préparation
+		<ol>Préparation
 			<li>Séparer le blanc des jaunes d'oeufs</li>
 			<li>Mélanger les jaunes d'oeufs avec le sucre et le sucre vanillé, jusqu'à ce que le résultat blanchisse</li>
 			<li>Incorporer le mascarpone à la préparation, bien mélanger</li>
@@ -35,7 +37,7 @@
 			<li>Ajouter le reste de la préparation</li>
 			<li>Saupoudrer de chocolat amer</li>
 			<li>Mettre au frais pendant 2 heures</li>
-		</ul>
+		</ol>
 
 	</section>
 
